examples/test/testpolicy1144.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1144
  namespace: namespace399
spec:
  podSelector:
    matchLabels:
      key33: value6
      key23: value48
      key5: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value21
      podSelector:
        matchLabels:
          key24: value36
          key1: value8
